--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 asgiref==3.2.3
-certifi==2019.11.28
-chardet==3.0.4
 coverage==5.0.3
 Django==3.0.3
 djangorestframework==3.11.0
-idna==2.8
+entrypoints==0.3
+flake8==3.7.9
 lxml==4.5.0
+mccabe==0.6.1
+pip-autoremove==0.9.1
+pycodestyle==2.5.0
+pyflakes==2.1.1
 python-dateutil==2.8.1
 pytz==2019.3
-requests==2.22.0
 six==1.14.0
 sqlparse==0.3.0
-urllib3==1.25.8
