--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Test with coverage
       run: |
         pip install coverage
-        coverage run ./manage.py test
+        coverage run manage.py test
