--- a/.github/workflows/buildversion.yml
+++ b/.github/workflows/buildversion.yml
@@ -39,10 +39,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
     - run : |
-        echo steps.version.outputs.new_version
+        echo ${{steps.version.outputs.new_version}}
     - name: "Publish"
       uses: marvinpinto/action-automatic-releases@v0.2.2
-      if: startsWith(steps.version.outputs.new_version, 'v0.4')
+      if: startsWith(steps.version.outputs.new_version, '0.4')
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         prerelease: false
