#patch fix id reference in build workflow

--- a/.github/workflows/buildversion.yml
+++ b/.github/workflows/buildversion.yml
@@ -39,7 +39,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
     - run : |
-        echo ${{steps.version.outputs.new_version}}
+        printenv
+        echo ${{ steps.version.outputs.new_tag }}
     - name: "Publish"
       uses: marvinpinto/action-automatic-releases@v0.2.2
       if: startsWith(steps.version.outputs.new_version, '0.4')
