--- a/.github/workflows/buildversion.yml
+++ b/.github/workflows/buildversion.yml
@@ -42,7 +42,8 @@ jobs:
         echo 'New version tag: '${{ steps.version.outputs.new_tag }}
     - name: "Publish"
       uses: marvinpinto/action-automatic-releases@v0.2.2
-      if: startsWith(steps.version.outputs.new_tag, 'v0.5')
+      if: startsWith(steps.version.outputs.new_tag, 'v0.4')
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         prerelease: false
+        automatic_release_tag: steps.version.outputs.new_tag
